<resources>
    <string name="app_name">Near to Natural</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">My Account</string>
    <string name="menu_posting">Posting</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_mypost">Posting</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="conPassword">Confirm Password</string>
    <string name="contact">Contact No</string>
    <string name="upload">Upload</string>
    <string name="reset">Reset</string>
    <string name="register">Register</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="change">Change</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="url_server">https://angeh.000webhostapp.com/</string>
    <string name="url_user_create">api/user/create.php</string>
    <string name="error_value_required">Wrong input!!!</string>
    <string name="empty_username">Please fill up the username.</string>
    <string name="empty_contact">Please fill up the contact.</string>
    <string name="empty_conPassword">Please fill up the confirm password</string>
    <string name="empty_password">Please fill up the password</string>
    <string name="registration">Registration</string>
    <string name="url_validate_Name">api/user/validateUser.php</string>
    <string name="error_value_repeated">Repeated username</string>
    <string name="url_user_login">api/user/read_one.php</string>
    <string name="favourite">Add to Favourite</string>
    <string name="unfavourite">Remove from Favourite</string>
    <string name="hide">Hide</string>
    <string name="likeDesc">Like the Post</string>
    <string name="noLike">Remove Like from the Post</string>
    <string name="defaultLike">0</string>
    <string name="url_post_read">api/post/readAll.php</string>
    <string name="url_favourite_create">api/favourite/create.php</string>
    <string name="url_like_inc">api/post/updateLike.php</string>
    <string name="url_hide_create">api/hide/create.php</string>
    <string name="url_hide_delete">api/hide/delete.php</string>
    <string name="editProfile">Update Profile</string>
    <string name="url_user_update">api/user/update.php</string>
    <string name="add">ADD POST</string>
    <string name="addPost">Add Post</string>
    <string name="postDesc">Post Description</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="url_post_create">api/post/create.php</string>
    <string name="empty_desc">Please input post text.</string>
    <string name="hided">Hided Post</string>
    <string name="hidedDesc">This is hided post, you can unhide it by clicking on the unhide button</string>
    <string name="unhide">Unhide</string>
    <string name="url_hide_read">api/hide/read.php</string>
    <string name="toDisplay">TO DISPLAY</string>
    <string name="url_favourite_delete">api/favourite/delete.php</string>
    <string name="fav">Favourite Post</string>
    <string name="favDesc">This is your favourite post, you can remove it by tapping the favourite button on the top right of the post.</string>
    <string name="clear">Clear All</string>
    <string name="tapMe">TAP TO DISPLAY</string>
    <string name="favourtie">My Favourite</string>
    <string name="newPost">Add Post</string>
    <string name="Profile">My Profile</string>
    <string name="update">Update</string>
    <string name="logOut">Log Out</string>
    <string name="help">Help or FAQ</string>
    <string name="helpDesc">This page is mostly the question asked by user and reply from developer. You can also post your question in the text box below</string>
    <string name="KeyIn">Tap to Key In Question</string>
    <string name="url_create_help">api/helps/create.php</string>
    <string name="url_read_help">api/helps/read.php</string>
    <string name="url_favourite_read">api/favourite/read.php</string>
    <string name="url_favourite_deleteAll">api/favourite/deleteAll.php</string>
    <string name="url_hide_deleteAll">api/hide/deleteAll.php</string>
</resources>
