<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.neartonatural.ui.home.HomeActivity"
        android:label="@string/menu_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.neartonatural.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/profile" />

    <fragment
        android:id="@+id/nav_posting"
        android:name="com.example.neartonatural.ui.posting.PostingFragment"
        android:label="@string/menu_posting"
        tools:layout="@layout/fragment_posting" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.neartonatural.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

</navigation>